--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle-item">Mark Guerrero</h3>
-              <p class="subtitle-text">Product Designer</p>
+              <div>
+                <h3 class="subtitle-item">Mark Guerrero</h3>
+                <p class="subtitle-text">Product Designer</p>
+              </div>
             </li>
             <li class="card-color">
               <img
@@ -116,8 +118,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle-item">Tom Ford</h3>
-              <p class="subtitle-text">Frontend Developer</p>
+              <div>
+                <h3 class="subtitle-item">Tom Ford</h3>
+                <p class="subtitle-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="card-color">
               <img
@@ -126,8 +130,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle-item">Camila Garcia</h3>
-              <p class="subtitle-text">Marketing</p>
+              <div class="card-team-name">
+                <h3 class="subtitle-item">Camila Garcia</h3>
+                <p class="subtitle-text">Marketing</p>
+              </div>
             </li>
             <li class="card-color">
               <img
@@ -136,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle-item">Daniel Wilson</h3>
-              <p class="subtitle-text">UI Designer</p>
+              <div>
+                <h3 class="subtitle-item">Daniel Wilson</h3>
+                <p class="subtitle-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
