--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 width="264"
                 height="260"
               />
-              <div class="card-team-name">
+              <div class="card-team">
                 <h3 class="subtitle-item">Camila Garcia</h3>
                 <p class="subtitle-text">Marketing</p>
               </div>
