--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="card-team">
                 <h3 class="subtitle-item">Mark Guerrero</h3>
                 <p class="subtitle-text">Product Designer</p>
               </div>
@@ -118,7 +118,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="card-team">
                 <h3 class="subtitle-item">Tom Ford</h3>
                 <p class="subtitle-text">Frontend Developer</p>
               </div>
@@ -142,7 +142,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="card-team">
                 <h3 class="subtitle-item">Daniel Wilson</h3>
                 <p class="subtitle-text">UI Designer</p>
               </div>
