--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
           <ul class="principles-list">
             <li class="principles-item">
               <h3 class="principles-subtitle">Strategy</h3>
-              <p class="subtitle-text">
+              <p class="principles-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="principles-item">
               <h3 class="principles-subtitle">Punctuality</h3>
-              <p class="subtitle-text">
+              <p class="principles-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="principles-item">
               <h3 class="principles-subtitle">Diligence</h3>
-              <p class="subtitle-text">
+              <p class="principles-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="principles-item">
               <h3 class="principles-subtitle">Technologies</h3>
-              <p class="subtitle-text">
+              <p class="principles-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -99,52 +99,54 @@
         <div class="container">
           <h2 class="subtitle subtitle-team">Our Team</h2>
           <ul class="team-list">
-            <li class="card-color">
+            <li class="team-item">
               <img
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
-              <div class="card-team">
-                <h3 class="subtitle-item">Mark Guerrero</h3>
-                <p class="subtitle-text">Product Designer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle text-center">Mark Guerrero</h3>
+                <p class="team-text text-center text-center">
+                  Product Designer
+                </p>
               </div>
             </li>
-            <li class="card-color">
+            <li class="team-item">
               <img
                 src="./images/tom.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
               />
-              <div class="card-team">
-                <h3 class="subtitle-item">Tom Ford</h3>
-                <p class="subtitle-text">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle text-center">Tom Ford</h3>
+                <p class="team-text text-center">Frontend Developer</p>
               </div>
             </li>
-            <li class="card-color">
+            <li class="team-item">
               <img
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
               />
-              <div class="card-team">
-                <h3 class="subtitle-item">Camila Garcia</h3>
-                <p class="subtitle-text">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-subtitle text-center">Camila Garcia</h3>
+                <p class="team-text text-center">Marketing</p>
               </div>
             </li>
-            <li class="card-color">
+            <li class="team-item">
               <img
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
               />
-              <div class="card-team">
-                <h3 class="subtitle-item">Daniel Wilson</h3>
-                <p class="subtitle-text">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle text-center">Daniel Wilson</h3>
+                <p class="team-text text-center">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -162,8 +164,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Banking App</h3>
-                <p class="subtitle-text">App</p>
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -174,8 +176,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Cashless Payment</h3>
-                <p class="subtitle-text">Marketing</p>
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -186,8 +188,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Meditation App</h3>
-                <p class="subtitle-text">App</p>
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -198,8 +200,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Taxi Service</h3>
-                <p class="subtitle-text">Marketing</p>
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -210,8 +212,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Screen Illustrations</h3>
-                <p class="subtitle-text">Design</p>
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -222,8 +224,8 @@
                 height="300"
               />
               <div class="portfolio-card">
-                <h3 class="subtitle-item">Online Courses</h3>
-                <p class="subtitle-text">Marketing</p>
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -235,7 +237,7 @@
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-light">Studio</span></a
         >
-        <p class="subtitle-text footer-subtitle-text">
+        <p class="subtitle-text footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
